--- a/TranslationReg/Views/Shared/_Layout.cshtml
+++ b/TranslationReg/Views/Shared/_Layout.cshtml
@@ -18,6 +18,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
                 </button>
                 @Html.ActionLink("Учет переводов", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
@@ -27,6 +28,7 @@
                     <li>@Html.ActionLink("Проекты", "Index", "Projects")</li>
                     <li>@Html.ActionLink("Документы", "Index", "Documents")</li>
                     <li>@Html.ActionLink("Языки", "Index", "Languages")</li>
+                    <li>@Html.ActionLink("Типы работ", "Index", "WorkTypes")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
