--- a/TranslationReg/Views/Projects/Card.cshtml
+++ b/TranslationReg/Views/Projects/Card.cshtml
@@ -33,9 +33,8 @@
                                     (z => new { z.User.AvatarPath, z.User.Name }))).Distinct();
                                 if (usersData.Count() > 4)
                                 {
-
                                     <div class="avatar-list-block">
-                                        <i class="fas fa-ellipsis-h fa-lg"></i>
+                                        <i class="fa fa-ellipsis-h"></i>
                                         <ul class="avatar-list">
                                             @foreach (var data in usersData)
                                             {
@@ -46,7 +45,7 @@
                                 }
                                 else
                                 {
-                                    <ul class="avatar-list">
+                                    <ul class="list-display">
                                         @foreach (var data in usersData)
                                         {
                                             <li><img src="@Url.Content("~/"+data.AvatarPath)" title="@data.Name" /></li>
@@ -64,6 +63,18 @@
                                 else
                                 {
                                     <span><i class="fa fa-list"></i> @project.Documents.Count documents</span>
+                                }
+
+                                @if (@project.Documents.Count == 0)
+                                {
+                                    <div class="documents-list">
+                                        <ul>
+                                            <li>Документов нет</li>
+                                        </ul>
+                                    </div>
+                                }
+                                else
+                                {
                                     <div class="documents-list">
                                         <ul>
                                             @foreach (var document in project.Documents)
@@ -73,6 +84,7 @@
                                         </ul>
                                     </div>
                                 }
+
 
                             </div>
                         </div>
@@ -112,6 +124,7 @@
     .card-users {
         display: flex;
         justify-content: space-between;
+        position: relative;
     }
 
     .avatar-list-block {
@@ -126,28 +139,51 @@
         padding: 10px;
         position: absolute;
         width: 178px;
-        left: -135px;
+        left: -136px;
         top: 25px;
         font-size: 18px;
         background-color: white;
         box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
     }
 
-        .avatar-list li {
-            display: inline-block;
-            font-size: 25px;
-        }
+    .avatar-list li {
+        display: inline-block;
+        font-size: 25px;
+    }
 
-            .avatar-list li img {
-                width: 35px;
-                height: 35px;
-                border-radius: 50%;
-                border: 1px solid lightgray;
-            }
+        .avatar-list li img {
+            width: 35px;
+            height: 35px;
+            border-radius: 50%;
+            border: 1px solid lightgray;
+        }
 
     .avatar-list-block:hover .avatar-list {
         display: inline-block;
     }
+
+    .list-display {
+        list-style: none;
+        display: inline-block;
+        margin: 0;
+        padding: 0;
+        font-size: 18px;
+        width: auto;
+        line-height: 40px;
+        vertical-align: middle;
+        max-width: 178px;
+    }
+
+    .list-display li {
+        display: inline-block;
+    }
+
+        .list-display li img {
+            width: 35px;
+            height: 35px;
+            border-radius: 50%;
+            border: 1px solid lightgray;
+        }
 
     .project-card {
         position: relative;
@@ -332,6 +368,5 @@
 
     .documents-list ul li {
         text-decoration: underline;
-        color: black;
     }
 </style>
